--- a/index.html
+++ b/index.html
@@ -6,12 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,800;1,200&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <title>TO DO LIST</title>
 </head>
 
 <body>
 
+    <header>
+        <h1>JB's TOdo List</h1>
+    </header>
+    <form action="">
+        <input type="text" class="todo-input">
+        <button class="todo-button" type="submit"></button>
+        <i class="fas fa-plus-square"></i>
+    </form>
+
+    <script src="./app.js"></script>
 </body>
 
 </html>
