--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
         <i class="fas fa-plus-square"></i>
     </form>
 
+    <div class="todo-container">
+        <ul class="todo-list">
+            <!-- We will use JS to create a div with a class of todo and it will have an li and some buttons -->
+        </ul>
+    </div>
+
     <script src="./app.js"></script>
 </body>
 
