--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
     <header>
         <h1>JB's TOdo List</h1>
     </header>
-    <form action="">
+    <form>
         <input type="text" class="todo-input">
-        <button class="todo-button" type="submit"></button>
+        <button class="todo-button" type="submit">
+        </button>
         <i class="fas fa-plus-square"></i>
+
     </form>
 
     <div class="todo-container">
