--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <header>
-        <h1>JB's TOdo List</h1>
+        <h1>JB's Todo List</h1>
     </header>
     <form>
         <input type="text" class="todo-input">
