building todo event fucntion - created the div, list and task checked and task remove button

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div class="todo-container">
         <ul class="todo-list">
-            <!-- We will use JS to create a div with a class of todo and it will have an li and some buttons -->
+            <!-- We will use JS to create a div with a class of todo and it will have an li and some buttons which will include a delete and checked button -->
         </ul>
     </div>
 
