--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
     <header>
         <h1>Jb's Todo List</h1>
     </header>
+
+    <div class="select">
+        <select name="todos" id="" class="filter-todo">
+            <option value="all">All</option>
+            <option value="Completed">Completed</option>
+            <option value="Pending">Pending</option>
+        </select>
+    </div>
+
     <form>
         <input type="text" class="todo-input">
         <button class="todo-button" type="submit">
