--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,800;1,200&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>TO DO LIST</title>
 </head>
 
@@ -25,10 +25,10 @@
             <i class="fas fa-plus-square"></i>
         </button>
         <div class="select">
-            <select name="todos" id="" class="filter-todo">
+            <select name="todos" class="filter-todo">
                 <option value="all">All</option>
-                <option value="Completed">Completed</option>
-                <option value="Pending">Pending</option>
+                <option value="completed">Completed</option>
+                <option value="pending">Pending</option>
             </select>
         </div>
     </form>
